<resources>
    <string name="app_name">Cleaning Service</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="UsernameInco">Username ou password incorrect</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Register">Register</string>
    <string name="Logout">Logout</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="Users">Users</string>
    <string name="My_Tasks">My tasks</string>
    <string name="Tasks">Tasks</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="Upload_Image">Upload Image</string>
    <string name="Update">Update</string>
    <string name="Valider">Valider</string>
    <string name="Commentaire">Commentare</string>
    <string name="modifprofil">Modifier Profil</string>
    <string name="fingerprint"><u>Login using fingerprint</u></string>
    <string name="forgot"><u>Forgot Password?</u></string>
    <string name="task_name">Task Name</string>
    <string name="dscription">Description</string>
    <string name="Mail">Email</string>
    <string name="MyTeam">My team</string>
    <string name="All_Tasks">All Tasks</string>
</resources>
